SERVER-19367 Return ConnectionString by value, not by reference